Make sure that the corresponding pointer events are sent when pressing eraser button

When we press an eraser button of a stylus, we should send the missing
pointerdown, pointerup, gotpointercapture and lostpointercapture events.

Bug: 851457
Change-Id: Iff45a897a87ef03d73cc308d84e874dbc1310fa1
Reviewed-on: https://chromium-review.googlesource.com/1129619
Commit-Queue: Lan Wei <lanwei@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575384}
Former-commit-id: a7b13da0ce3c2a57eae58499b1e8c13e8432baa7